--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --history-api-fallback --config build/webpack.config.dev.js",
     "start": "npm run dev",
+    "prod": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js --ext .vue src --ext .vue packages --ext .vue --ext .js doc --ext .vue",
-    "lint:fix":"eslint --ext .js,.vue src  doc test packages --fix",
-    "lint:staged": "lint-staged"
-
+    "lint:fix": "eslint --ext .js,.vue src  doc test packages --fix",
+    "lint:staged": "lint-staged",
+    "test:unit": "jest --config test/jest.config.js",
+    "test": "npm run lint && npm run test:unit",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
+    "docs:build": "webpack --config build/webpack.config.doc.js",
+    "createComponent": "node script/create-component.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "vue": "^2.6.11"
+    "vue": "2.6.10"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
@@ -48,7 +53,7 @@
     "husky": "2.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "24.9.0",
-    "jest-serializer-vue": "2.0.2",
+    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "8.2.1",
     "markdown-it-anchor": "^5.2.5",
     "markdown-it-chain": "^1.3.0",
@@ -60,9 +65,11 @@
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "transliteration": "^2.1.8",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
     "uglify-es": "3.3.9",
     "url-loader": "1.1.2",
-    "vue-jest": "3.0.4",
+    "vue-jest": "^3.0.4",
     "vue-loader": "15.7.0",
     "vue-markdown": "^2.2.4",
     "vue-router": "3.0.6",
