--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "panda-ui",
   "version": "0.0.1",
   "description": "A Vue.js 2.0 Web UI Toolkit",
-  "main": "package/ninecat-ui.js",
+  "main": "package/panda-ui.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --history-api-fallback --config build/webpack.config.dev.js",
     "start": "npm run dev",
@@ -61,6 +61,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.12.0",
     "sass-loader": "7.2.0",
+    "sass-resources-loader": "^2.0.3",
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
