--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "panda-ui",
+  "name": "panda-framework",
   "version": "0.0.1",
   "description": "A Vue.js 2.0 Web UI Toolkit",
-  "main": "package/panda-ui.js",
+  "main": "package/panda-framework.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --history-api-fallback --config build/webpack.config.dev.js",
     "start": "npm run dev",
