--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "panda-framework",
-  "version": "0.0.6",
+  "version": "0.0.15",
   "description": "A Vue.js 2.0 Web UI Toolkit",
-  "main": "package/panda-framework.js",
+  "main": "lib/panda-framework.common.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --history-api-fallback --config build/webpack.config.dev.js",
     "start": "npm run dev",
@@ -14,13 +14,18 @@
     "test": "npm run lint && npm run test:unit",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
     "docs:build": "webpack --config build/webpack.config.doc.js",
-    "createComponent": "node script/create-component.js"
+    "createComponent": "node script/create-component.js",
+    "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage",
+    "pub":"npm publish",
+    "dist": "npm run clean && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && webpack --config build/webpack.component.js && npm run build:theme",
+    "build:theme": " node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "deepmerge": "^4.2.2",
     "element-ui": "^2.13.2",
+    "tslib": "^2.0.0",
     "vue": "2.6.10"
   },
   "devDependencies": {
@@ -32,11 +37,13 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-jsx-v-model": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "5.0.4",
+    "cp-cli": "^2.0.0",
     "css-loader": "2.1.1",
     "docsearch.js": "^2.6.3",
     "eslint": "5.16.0",
@@ -47,7 +54,9 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "5.2.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "4.2.0",
+    "file-save": "^0.2.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "highlight.js": "^9.18.1",
     "html-webpack-plugin": "3.2.0",
@@ -61,11 +70,14 @@
     "markdown-it-container": "^2.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.12.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "rimraf": "^3.0.2",
     "sass-loader": "7.2.0",
     "sass-resources-loader": "^2.0.3",
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
+    "terser-webpack-plugin": "^3.0.2",
     "transliteration": "^2.1.8",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
@@ -80,7 +92,8 @@
     "webpack": "4.39.2",
     "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.8.0",
-    "webpack-merge": "4.2.1"
+    "webpack-merge": "4.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "lint-staged": {
     "linters": {
