--- a/components.json
+++ b/components.json
@@ -1,5 +1,4 @@
 {
-  "alert": "./packages/alert/index.js",
   "button": "./packages/button/index.js",
   "button-group": "./packages/button-group/index.js",
   "checkbox": "./packages/checkbox/index.js",
@@ -8,6 +7,5 @@
   "icon": "./packages/icon/index.js",
   "radio": "./packages/radio/index.js",
   "radio-button": "./packages/radio-button/index.js",
-  "radio-group": "./packages/radio-group/index.js",
-  "model": "./packages/model/index.js"
+  "radio-group": "./packages/radio-group/index.js"
 }
