新增文字链接组件以及chekcbox的api说明

--- a/components.json
+++ b/components.json
@@ -7,5 +7,6 @@
   "icon": "./packages/icon/index.js",
   "radio": "./packages/radio/index.js",
   "radio-button": "./packages/radio-button/index.js",
-  "radio-group": "./packages/radio-group/index.js"
+  "radio-group": "./packages/radio-group/index.js",
+  "Link": "./packages/Link/index.js"
 }
