--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js --ext .vue src --ext .vue packages --ext .vue --ext .js doc --ext .vue",
     "lint:fix": "eslint --ext .js,.vue src  doc test packages --fix",
     "lint:staged": "lint-staged",
+    "csslint": "stylelint 'packages/**/*.scss'",
+    "csslint:fix": "stylelint 'packages/**/*.scss' --fix",
     "test:unit": "jest --config test/jest.config.js",
     "test": "npm run lint && npm run test:unit",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
@@ -21,7 +23,7 @@
     "new": "node script/create-component.js",
     "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage",
     "pub": "npm publish",
-    "create-json":"node build/bin/build-component.js",
+    "create-json": "node build/bin/build-component.js",
     "build:icon": "node build/bin/iconInit",
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "dist": "npm run clean && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && webpack --config build/webpack.component.js && npm run build:utils && npm run build:theme",
@@ -32,6 +34,9 @@
   "dependencies": {
     "deepmerge": "^4.2.2",
     "element-ui": "^2.13.2",
+    "stylelint": "^13.6.1",
+    "stylelint-config-recess-order": "^2.0.4",
+    "stylelint-config-standard": "^20.0.0",
     "throttle-debounce": "^2.1.0",
     "tslib": "^2.0.0",
     "vue": "2.6.10"
